Snap to vertices not work properly in orthogonal view mode #47326

Closed
opened 2016-02-04 18:14:37 +01:00 by Germano Cavalcante · 5 comments

Blender Version
Broken: example: 2.76.9

Short description of error
With small distances between vertices, it is difficult make a vertex snapping to other in orthogonal view mode.

Exact steps for others to reproduce the error
In the standard cube,
in edit mode,
in orthogonal viewing mode,
with the option to "snap to vertices" enabled,
subdivide the cube twice,
choose any vertex and
try snapping to the others around.

You will see that does not always work.

**Blender Version** Broken: example: 2.76.9 **Short description of error** With small distances between vertices, it is difficult make a vertex snapping to other in orthogonal view mode. **Exact steps for others to reproduce the error** In the standard cube, in edit mode, in orthogonal viewing mode, with the option to "snap to vertices" enabled, subdivide the cube twice, choose any vertex and try snapping to the others around. You will see that does not always work.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Author
Member

I do not know if it will be used, but here's a way to fix the problem:
P311

I do not know if it will be used, but here's a way to fix the problem: [P311](https://archive.blender.org/developer/P311.txt)
Bastien Montagne self-assigned this 2016-02-05 15:40:45 +01:00

This issue was referenced by 3ad0344171

This issue was referenced by 3ad0344171dfa6a6116882e2e3b04ede26d4be65

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47326
No description provided.